.metadata/.plugins/org.eclipse.cdt.ui/11_ADC_Gercek_Voltaj_Degeri.build.log
14:22:44 **** Incremental Build of configuration Debug for project 11_ADC_Gercek_Voltaj_Degeri ****
make -j20 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F407xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c:48:10: warning: built-in function 'index' declared as non-function [-Wbuiltin-declaration-mismatch]
   48 | uint32_t index=0;
      |          ^~~~~
../Core/Src/main.c: In function 'Read_ADC_Real_Voltage':
../Core/Src/main.c:103:5: warning: 'main' is normally a non-static function [-Wmain]
  103 | int main(void)
      |     ^~~~
../Core/Src/main.c:199:13: error: invalid storage class for function 'MX_ADC1_Init'
  199 | static void MX_ADC1_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:260:13: error: invalid storage class for function 'MX_GPIO_Init'
  260 | static void MX_GPIO_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:290:1: error: expected declaration or statement at end of input
  290 | }
      | ^
../Core/Src/main.c: At top level:
../Core/Src/main.c:55:13: warning: 'MX_GPIO_Init' used but never defined
   55 | static void MX_GPIO_Init(void);
      |             ^~~~~~~~~~~~
../Core/Src/main.c:56:13: warning: 'MX_ADC1_Init' used but never defined
   56 | static void MX_ADC1_Init(void);
      |             ^~~~~~~~~~~~
../Core/Src/main.c:281:6: warning: 'Error_Handler' defined but not used [-Wunused-function]
  281 | void Error_Handler(void)
      |      ^~~~~~~~~~~~~
../Core/Src/main.c:260:13: warning: 'MX_GPIO_Init' defined but not used [-Wunused-function]
  260 | static void MX_GPIO_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:199:13: warning: 'MX_ADC1_Init' defined but not used [-Wunused-function]
  199 | static void MX_ADC1_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:152:6: warning: 'SystemClock_Config' defined but not used [-Wunused-function]
  152 | void SystemClock_Config(void)
      |      ^~~~~~~~~~~~~~~~~~
../Core/Src/main.c:103:5: warning: 'main' defined but not used [-Wunused-function]
  103 | int main(void)
      |     ^~~~
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j20 all" terminated with exit code 2. Build might be incomplete.

14:22:44 Build Failed. 4 errors, 9 warnings. (took 178ms)

